<resources>
    <string name="app_name">Movistar App</string>
    <string name="shortcutImage">imagen para los accesos directos</string>
    <string name="blueBow">imagen de arco azul</string>
    <string name="greenBow">imagen de arco verde</string>
    <string name="generalBanner">imagen de banner general</string>
    <string name="welcomeToMovistar">Bienvenido a movistar</string>
    <string name="cutOffDateTitle">Detalles de tus consumos</string>
    <string name="cutOffDateTextTool">Tu fecha de corte es el: 25/10/2024</string>
    <string name="cutOffDateText">Tu Fecha de corte es el: %1$s</string>
    <string name="shortcutsTitle">Accesos directos</string>
    <string name="youHaveLeft">Te quedan</string>
    <string name="balanceTitle">Saldo</string>
    <string name="dateTitle">Datos</string>
    <string name="dataLimitText">De 5600</string>
    <string name="platformPrepaid">Prepago</string>
    <string name="platformPostpaid">Postpago</string>
    <string name="greeting">¡Hola, %1$s!</string>

    <string name="plansText">Planes</string>
    <string name="optionsForYouText">Opciones para ti</string>
    <string name="contactUsText">Contáctanos</string>
    <string name="managementChannelsText">Canales de gestión</string>
    <string name="storeText">Tienda</string>
    <string name="buyLineText">Compra una línea</string>
    <string name="movistarClubText">Club Movistar</string>
    <string name="benefitsText">Beneficios</string>

    <string name="noInternetConnection">No hay conexión a Internet</string>
    <string name="noBrowserFound">No se encontró ningún navegador web</string>
    <string name="insufficientPermissions">Permisos insuficientes para abrir la URL</string>
    <string name="errorOpeningUrl">Ocurrió un error al intentar abrir la URL</string>


</resources>